[package]
name = "message-io"
version = "0.14.3"
authors = ["lemunozm <lemunozm@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "Apache-2.0"
description = "Fast and easy-to-use event-driven network library"
homepage = "https://github.com/lemunozm/message-io/"
repository = "https://github.com/lemunozm/message-io/"
keywords = ["network", "message", "events", "non-blocking", "tcp"]
categories = ["asynchronous", "game-development", "network-programming", "rust-patterns", "web-programming::websocket"]

[badges]
maintenance = { status = "actively-developed" }

[package.metadata.docs.rs]
all-features = true

[features]
default = ["tcp", "udp", "websocket"] # All features by default
tcp = ["mio/tcp"]
udp = ["mio/udp", "socket2"]
websocket = ["tungstenite", "url", "tcp"]

[dependencies]
mio = { version = "0.7", features = ["os-poll"] }
serde = { version = "1.0", features = ["derive"] }
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
log = "0.4"
strum = { version = "0.20", features = ["derive"] }
socket2 = { version = "0.3.19", features = ["reuseport"], optional = true}
tungstenite = { version = "0.16", optional = true }
url = { version = "2.2", optional = true }
integer-encoding = "3.0.2"
lazy_static = "1.4.0"

[dev-dependencies]
bincode = "1.3.1"
criterion = "0.3"
fern = "0.6.0"
chrono = "0.4.19"
test-case = "1.1.0"
rand = "0.8.3"
httparse = "1.3.5"
doc-comment = "0.3"

[[bench]]
name = "latency"
harness = false
