[package]
name = "message-io"
version = "0.18.1"
authors = ["lemunozm <lemunozm@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "Apache-2.0"
description = "Fast and easy-to-use event-driven network library"
homepage = "https://github.com/lemunozm/message-io/"
repository = "https://github.com/lemunozm/message-io/"
keywords = ["network", "message", "events", "non-blocking", "tcp"]
categories = ["asynchronous", "game-development", "network-programming", "rust-patterns", "web-programming::websocket"]

[badges]
maintenance = { status = "actively-developed" }

[package.metadata.docs.rs]
all-features = true

[features]
default = ["tcp", "udp", "websocket", "unixsocket"] # All features that are crossplatform by default
tcp = ["mio/net", "socket2"]
udp = ["mio/net", "socket2"]
websocket = ["tungstenite", "url", "tcp"]
unixsocket = ["mio/net", "socket2"] # TODO: check if this is really needed

[dependencies]
mio = { version = "0.8", features = ["os-poll"] }
serde = { version = "1.0", features = ["derive"] }
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
log = "0.4"
strum = { version = "0.24", features = ["derive"] }
socket2 = { version = "0.5.1", features = ["all"], optional = true}
tungstenite = { version = ">=0.20.1", optional = true }
url = { version = "2.2", optional = true }
integer-encoding = "3.0.2"
lazy_static = "1.4.0"

[target.'cfg(target_os = "linux")'.dependencies.nix]
version = "0.26.2"
default-features = false
features = ["socket", "uio", "net"]

[target.'cfg(unix)'.dependencies.libc]
version = "0.2.137"
default-features = false

[dev-dependencies]
bincode = "1.3.1"
criterion = "0.4"
fern = "0.6.0"
chrono = { version = "0.4.24", features = ["clock"], default-features = false }
test-case = "1.1.0"
rand = "0.8"
httparse = "1.3.5"
doc-comment = "0.3"

[[bench]]
name = "latency"
harness = false
